Fix jump down animation

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -49,7 +49,6 @@
   --animate-archive-tip: archive-tip 0.6s cubic-bezier(0.3, 0.2, 0.17, 3)
     forwards;
   --animate-flap: flap 0.2s linear 3;
-  --animate-elevator: elevator 1.5s ease-in-out;
 
   @keyframes fade-in {
     from: {
@@ -89,21 +88,6 @@
     }
     100% {
       transform: translateY(0) rotate(8deg);
-    }
-  }
-
-  @keyframes elevator {
-    0% {
-      transform: translateY(0px);
-    }
-    50% {
-      transform: translateY(80%);
-    }
-    50.000001% {
-      transform: translateY(-80%);
-    }
-    100% {
-      transform: translateY(0px);
     }
   }
 }
